# renderdoc-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: install_qrenderdoc_extension.py
src/renderdoc_mcp/: __init__.py  __main__.py  backend.py  bootstrap.py  bridge.py  errors.py  install.py  install_cli.py  native_bridge.py  native_helper.py  paths.py  protocol.py  server.py  service.py  session_pool.py  standalone_context.py  uri.py
src/renderdoc_mcp/analysis/: __init__.py  action_listing.py  frame_analysis.py  hotspots.py  models.py  pass_classification.py  resource_usage.py  timing.py
src/renderdoc_mcp/application/: app.py  command_specs.py  context.py  registry.py  response.py
src/renderdoc_mcp/application/handlers/: actions.py  captures.py  resources.py
src/renderdoc_mcp/application/services/: __init__.py  capture_sessions.py  input_normalizer.py  ui_config.py
src/renderdoc_mcp/qrenderdoc_extension/: __init__.py
src/renderdoc_mcp/services/: __init__.py  actions.py  capture.py  common.py  passes.py  performance.py  pixels.py  resources.py
tests/: test_frame_analysis.py  test_integration.py  test_protocol.py  test_service.py  test_uri.py
tests/helpers/: __init__.py  exiting_native_helper.py  failing_native_helper.py  fake_native_helper.py
tests/integration/: test_native_python_backend.py  test_stdio_server.py
tests/unit/: test_application.py  test_backend.py  test_bridge.py  test_bridge_registry.py  test_context.py  test_frame_analysis.py  test_install.py  test_native_bridge.py  test_server.py  test_service.py  test_standalone_context.py
(+13 files in other folders)
